Fix style issue on small widths

--- a/src/styles/Pokemon.scss
+++ b/src/styles/Pokemon.scss
@@ -47,6 +47,9 @@
     justify-content: space-between;
     flex-direction: row;
   }
+  .reverse {
+    flex-direction: row-reverse;
+  }
   .pokemon--info {
     padding-bottom: 0;
     text-align: left;
